<resources>
    <string name="app_name">Baseball By The Numbers</string>
    <string name="right_handed">R</string>
    <string name="left_handed">L</string>
    <string name="switch_hitter">S</string>
    <string name="next_game_label">Next Game :</string>
    <string name="picture_of_preferred_city_content_desc">Picture of Preferred City</string>
    <string name="next_game_label_content_desc">Next Game Label</string>
    <string name="edit_lineup_button_label">Edit Lineup</string>
    <string name="have_coach_set_lineup_button_label">Have Coach Set Lineup</string>
    <string name="start_game_button_label">Start Game</string>
    <string name="simulate_game_button_label">Simulate All Games For Day</string>
    <string name="vs_label">vs</string>
    <string name="united_states_cb_label">United States</string>
    <string name="japan_cb_label">Japan</string>
    <string name="mexico_cb_label">Mexico</string>
    <string name="canada_cb_label">Canada</string>
    <string name="title_activity_game_play">Play Game</string>
    <string name="gameplay_tab_manage_game">Manage Game</string>
    <string name="gameplay_tab_play_by_play">Play By Play</string>
    <string name="gameplay_tab_box_score">Box Score</string>
    <string name="roster_tab_lineup">Lineup</string>
    <string name="roster_tab_pitching_rotation">Rotation</string>
    <string name="home_tab_label">Home</string>
    <string name="visitor_tab_label">Visitor</string>
    <string name="ab_box_score_label">AB</string>
    <string name="r_box_score_label">R</string>
    <string name="h_box_score_label">H</string>
    <string name="rbi_box_score_label">RBI</string>
    <string name="bb_box_score_label">BB</string>
    <string name="k_box_score_label">K</string>
    <string name="avg_box_score_label">AVG</string>
    <string name="obp_box_score_label">OBP</string>
    <string name="lob_box_score_label">LOB</string>
    <string name="hr_box_score_label">HR</string>
    <string name="batter_box_score_label">Hitters</string>
    <string name="whip_box_score_label">WHIP</string>
    <string name="era_box_score_label">ERA</string>
    <string name="er_box_score_label">ER</string>
    <string name="ip_box_score_label">IP</string>
    <string name="pitchers_box_score_label">Pitchers</string>
    <string name="inning_1_label">1</string>
    <string name="inning_2_label">2</string>
    <string name="inning_3_label">3</string>
    <string name="inning_4_label">4</string>
    <string name="inning_5_label">5</string>
    <string name="inning_6_label">6</string>
    <string name="inning_7_label">7</string>
    <string name="inning_8_label">8</string>
    <string name="inning_9_label">9</string>
    <string name="inning_10_label">10</string>
    <string name="inning_11_label">11</string>
    <string name="inning_12_label">12</string>
    <string name="runs_label">R</string>
    <string name="hits_label">H</string>
    <string name="errors_label">E</string>
    <string name="background_image_for_at_bat_results_content_description">Background Image For At Bat Results</string>
    <string name="first_inning_label">First</string>
    <string name="title_activity_roster">RosterActivity</string>
    <string name="roster_tab_player_detail">Player Detail</string>
    <string-array name="numberOfLeagues">
        <item>Choose Number Of Leagues</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="numberOfDivisions">
        <item>Choose Number Of Divisions Per League</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="numberOfTeamsInDivision">
        <item>Choose Number Of Teams Per Division</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="numberOfGamesInSeries">
        <item>Choose Number Of Games Per Series</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="abbreviation_long_reliever">LR</string>
    <string name="abbreviation_short_reliever">SR</string>
    <string name="abbreviation_starting_pitcher">SP</string>
    <string name="accuracy_stats_label">Accuracy</string>
    <string name="at_abt_summary_result_safe_at_first_on_error">\u0020safe at first on Error! \u0020</string>
    <string name="at_bat_result_fly_ball">Flyball to\u0020</string>
    <string name="at_bat_summary_add_ball">Ball,\u0020</string>
    <string name="at_bat_summary_and">\u0020and\u0020</string>
    <string name="at_bat_summary_balk">\u0020Balk,\u0020</string>
    <string name="at_bat_summary_balk_add_ball_to_count">\u0020(add a ball to count),\u0020</string>
    <string name="at_bat_summary_beats_throw_safe_at_first">\u0020beats the throw to first, Safe! \u0020</string>
    <string name="at_bat_summary_foul_ball">Foul Ball,\u0020</string>
    <string name="at_bat_summary_out_threw_it_away_runners_advance">, Out! but he threw it away trying for the double play!  Runners advance on Error! \u0020</string>
    <string name="at_bat_summary_result_advances_to_second">\u0020advances to Second Base!\u0020</string>
    <string name="at_bat_summary_result_advances_to_second_on_error">\u0020advances to Second on the error!</string>
    <string name="at_bat_summary_result_advances_to_third">\u0020advances to Third.\u0020</string>
    <string name="at_bat_summary_result_advances_to_third_on_error">, advances to Third on Error!\u0020</string>
    <string name="at_bat_summary_result_and_he_catches">, and he catches\u0020</string>
    <string name="at_bat_summary_result_and_it_gets_away">, and it gets away,\u0020</string>
    <string name="at_bat_summary_result_at_first">\u0020at first,\u0020</string>
    <string name="at_bat_summary_result_at_third">\u0020at third,\u0020</string>
    <string name="at_bat_summary_result_cant_hold_on_error">\u0020and he cant\'t hold on, Error!!!\u0020</string>
    <string name="at_bat_summary_result_caught_stealing_second">\u0020OUT! Caught Stealing Second Base!\u0020</string>
    <string name="at_bat_summary_result_caught_stealing_third">\u0020OUT! Caught Stealing Third Base!\u0020</string>
    <string name="at_bat_summary_result_double">Double to\u0020</string>
    <string name="at_bat_summary_result_double_play">, Double Play!!!</string>
    <string name="at_bat_summary_result_double_play_connector">\u0020Out!, and over to\u0020</string>
    <string name="at_bat_summary_result_double_steal">Double Steal!!!\u0020</string>
    <string name="at_bat_summary_result_double_steal_stole_second">\u0020Stole Second!\u0020</string>
    <string name="at_bat_summary_result_double_steal_stole_third">\u0020Stole Third! and\u0020</string>
    <string name="at_bat_summary_result_error_all_runners_safe">all runners safe on Error!\u0020</string>
    <string name="at_bat_summary_result_error_everyone_safe">\u0020everyone is SAFE!!!</string>
    <string name="at_bat_summary_result_error_off_glove_into_outfield_all_safe">, and it kicks off his glove into the outfield, everyone is safe,\u0020</string>
    <string name="at_bat_summary_result_error_on">…Error on\u0020</string>
    <string name="at_bat_summary_result_goes_to_second">\u0020goes to Second\u0020</string>
    <string name="at_bat_summary_result_goes_to_third">\u0020goes to Third\u0020</string>
    <string name="at_bat_summary_result_goes_to_third_on_error">\u0020goes to third on the Error. \u0020</string>
    <string name="at_bat_summary_result_grand_slam">\u0020hits a GRAND SLAM!!!\u0020</string>
    <string name="at_bat_summary_result_ground_ball">Grounder to\u0020</string>
    <string name="at_bat_summary_result_hit_by_pitch">\u0020Hit By Pitch!\u0020</string>
    <string name="at_bat_summary_result_home_run_connector">\u0020hits a\u0020</string>
    <string name="at_bat_summary_result_home_run_ending">\u0020run HOME RUN!!!\u0020</string>
    <string name="at_bat_summary_result_home_to_first_double_play">\u0020Out at home!  Throws to first, in time.  Double Play! \u0020</string>
    <string name="at_bat_summary_result_kicks_off_glove_connector">, and it kicks off his glove, everyone is safe,\u0020</string>
    <string name="at_bat_summary_result_kicks_off_glove_error">\u0020and it kicks off his glove, Error!!!\u0020</string>
    <string name="at_bat_summary_result_line_drive">Line Drive to\u0020</string>
    <string name="at_bat_summary_result_line_drive_double_play_connector">\u0020is Out, and he catches\u0020</string>
    <string name="at_bat_summary_result_line_drive_double_play_ending_throw_to_first">\u0020off first base, Double Play!</string>
    <string name="at_bat_summary_result_line_drive_fielding_error_comment">and it kicks off his glove, everyone is safe on the Error!\u0020</string>
    <string name="at_bat_summary_result_muffed_line_drive">dropped, everyone safe on the Error\u0020</string>
    <string name="at_bat_summary_result_off_the_base_double_play">\u0020off the base, Double Play!</string>
    <string name="at_bat_summary_result_off_the_base_steps_on_bag">\u0020off the base and steps on the bag, Out! Double Play!</string>
    <string name="at_bat_summary_result_out">, Out!\u0020</string>
    <string name="at_bat_summary_result_out_and_he_catches">Out!, and he catches\u0020</string>
    <string name="at_bat_summary_result_out_at_first">\u0020out at first. \u0020</string>
    <string name="at_bat_summary_result_out_at_first_double_play">\u0020Out at first.  Double Play!</string>
    <string name="at_bat_summary_result_out_at_first_runners_hold">\u0020Out at first!  Runners hold. \u0020</string>
    <string name="at_bat_summary_result_out_at_home">\u0020Out at home!,\u0020</string>
    <string name="at_bat_summary_result_out_at_second">\u0020out at second. \u0020</string>
    <string name="at_bat_summary_result_out_at_third_and">\u0020OUT at Third Base! and\u0020</string>
    <string name="at_bat_summary_result_out_batter_safe_at_first">\u0020Out!, but batter beats the throw to first, SAFE!\u0020</string>
    <string name="at_bat_summary_result_out_connector">throws to\u0020</string>
    <string name="at_bat_summary_result_out_error_batter_safe_at_first">\u0020Out!, but batter reaches first on an error!\u0020</string>
    <string name="at_bat_summary_result_out_over_to">\u0020Out!, and over to\u0020</string>
    <string name="at_bat_summary_result_out_shouldnt_happen">, OUT!, THIS SHOULDN\'T HAPPEN !!!!!!!!! \u0020</string>
    <string name="at_bat_summary_result_out_tagging_up">\u0020thrown out trying to tag up! OUT!!!\u0020</string>
    <string name="at_bat_summary_result_out_throws_it_away_trying_for_double_play">\u0020is Out, but he throws it away trying to get\u0020</string>
    <string name="at_bat_summary_result_out_throws_to">Out!, throws to\u0020</string>
    <string name="at_bat_summary_result_out_wild_throw_runner_to_second">\u0020Out!, throw to first gets away, batter goes to Second!!!</string>
    <string name="at_bat_summary_result_runners_advance_on_error">Runners advance on Error\u0020</string>
    <string name="at_bat_summary_result_runners_stealing_advance_to_second_and_third">\u0020Out! Runners were stealing and advance to second and third\u0020</string>
    <string name="finalize_game_button_label">Finalize Game</string>
    <string name="pause_game_button_label">Pause Game</string>
    <string name="pinch_hit_button_label">Pinch Hit</string>
    <string name="sim_current_at_bat_button_label">Sim Current At Bat</string>
    <string name="sim_rest_of_game_button_label">Sim Rest Of Game</string>
    <string name="standings_record_label">Record</string>
    <string name="standings_team_name_label">Team Name</string>
    <string name="standings_win_pct_label">Win %</string>
    <string name="sub_pitcher_button_label">Sub Pitcher</string>
</resources>