<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*">

    <TableRow
        android:id="@+id/box_score_detail_labels_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/box_score_details_batter_tv"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            style="@style/BoxScoreLabels"
            android:gravity="start"
            android:paddingStart="4dp"
            android:paddingLeft="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:text="@string/batter_box_score_label"/>

        <TextView
            android:id="@+id/box_score_details_AB_tv"
            style="@style/BoxScoreLabels"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="@string/ab_box_score_label" />

        <TextView
            android:id="@+id/box_score_details_R_tv"
            style="@style/BoxScoreLabels"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="@string/r_box_score_label" />

        <TextView
            android:id="@+id/box_score_details_H_tv"
            style="@style/BoxScoreLabels"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="@string/h_box_score_label" />

        <TextView
            android:id="@+id/box_score_details_RBI_tv"
            style="@style/BoxScoreLabels"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="@string/rbi_box_score_label" />

        <TextView
            android:id="@+id/box_score_details_HR_tv"
            style="@style/BoxScoreLabels"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="@string/hr_box_score_label" />

        <TextView
            android:id="@+id/box_score_details_BB_tv"
            style="@style/BoxScoreLabels"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="@string/bb_box_score_label" />

        <TextView
            android:id="@+id/box_score_details_K_tv"
            style="@style/BoxScoreLabels"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="@string/k_box_score_label" />

        <TextView
            android:id="@+id/box_score_details_LOB_tv"
            style="@style/BoxScoreLabels"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="@string/lob_box_score_label" />

        <TextView
            android:id="@+id/box_score_details_AVG_tv"
            style="@style/BoxScoreLabels"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/avg_box_score_label" />

        <TextView
            android:id="@+id/box_score_details_OBP_tv"
            style="@style/BoxScoreLabels"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/obp_box_score_label" />


    </TableRow>
</TableLayout>
</layout>