<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/manage_game_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.gameplay.ManageGameFragment">

            <Button
                android:id="@+id/sim_this_at_bat_button"
                style="@style/MainButtonStyle.ManageGame"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/sim_current_at_bat_button_label"
                app:backgroundTint="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/pinch_hit_button"
                style="@style/MainButtonStyle.ManageGame"
                android:text="@string/pinch_hit_button_label"
                app:backgroundTint="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/finalize_game_button" />

            <Button
                android:id="@+id/sub_pitcher_button"
                style="@style/MainButtonStyle.ManageGame"
                android:text="@string/sub_pitcher_button_label"
                app:backgroundTint="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="@+id/sim_this_at_bat_button"
                app:layout_constraintStart_toStartOf="@+id/sim_this_at_bat_button"
                app:layout_constraintTop_toBottomOf="@+id/pinch_hit_button" />

            <Button
                android:id="@+id/sim_rest_of_game_button"
                style="@style/MainButtonStyle.ManageGame"
                android:text="@string/sim_rest_of_game_button_label"
                app:backgroundTint="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="@+id/sim_this_at_bat_button"
                app:layout_constraintStart_toStartOf="@+id/sim_this_at_bat_button"
                app:layout_constraintTop_toBottomOf="@+id/sim_this_at_bat_button" />

            <Button
                android:id="@+id/pause_button"
                style="@style/MainButtonStyle.ManageGame"
                android:text="@string/pause_game_button_label"
                app:backgroundTint="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="@+id/sim_this_at_bat_button"
                app:layout_constraintStart_toStartOf="@+id/sim_this_at_bat_button"
                app:layout_constraintTop_toBottomOf="@+id/sim_rest_of_game_button" />

            <Button
                android:id="@+id/finalize_game_button"
                style="@style/MainButtonStyle.ManageGame"
                android:text="@string/finalize_game_button_label"
                app:backgroundTint="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="@+id/sim_this_at_bat_button"
                app:layout_constraintStart_toStartOf="@+id/sim_this_at_bat_button"
                app:layout_constraintTop_toBottomOf="@+id/pause_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>