<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp"
            tools:context=".UI.NewLeagueSetupActivity.PickCountriesFragment">


            <TextView
                android:id="@+id/chooseCountryLabelTV"
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:text="Please choose the countries you would like to include in your new league :"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/unitedStatesCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:checked="true"
                android:text="@string/united_states_cb_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="@+id/chooseCountryLabelTV"
                app:layout_constraintStart_toStartOf="@+id/chooseCountryLabelTV"
                app:layout_constraintTop_toBottomOf="@+id/chooseCountryLabelTV" />

            <CheckBox
                android:id="@+id/japanCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/japan_cb_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@+id/mexicoCB"
                app:layout_constraintTop_toBottomOf="@+id/mexicoCB" />

            <CheckBox
                android:id="@+id/mexicoCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/mexico_cb_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@+id/canadaCB"
                app:layout_constraintTop_toBottomOf="@+id/canadaCB" />

            <CheckBox
                android:id="@+id/canadaCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/canada_cb_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@+id/unitedStatesCB"
                app:layout_constraintTop_toBottomOf="@+id/unitedStatesCB" />

            <Button
                android:id="@+id/doneWithCountriesButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="32dp"
                android:text="Done"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/chooseCountryLabelTV"
                app:layout_constraintStart_toStartOf="@+id/chooseCountryLabelTV"
                app:layout_constraintTop_toBottomOf="@+id/japanCB" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>